Wildcraft blog with lanyon Template added
Wildcraft blog with lanyon Template added

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,28 @@
-theme: jekyll-theme-cayman
+# Dependencies
+markdown:         kramdown
+highlighter:         true
+
+# Permalinks
+permalink:        pretty
+
+# Setup
+title:            Wildcraft
+tagline:          'Blogs'
+description:      'As Software Craftmen, We like it Wild'
+url:              https://wildcraft.github.io/
+
+author:           
+  name:           'Narendran Solai'
+  url:            https://twitter.com/narendran_ss
+
+paginate:         5
+
+# Custom vars
+version:          2.0.0
+
+github:           
+  repo:           https://github.com/Wildcraft/
+
+plugins:
+  - jekyll-paginate
+  - jemoji
