Transitive Dependency visualization added
Transitive Dependency visualization added

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            Wildcraft
 tagline:          'Blogs'
-description:      'As Software Craftmen, We like it Wild'
+description:      'As Software Craftmen, We like it Natural & Wild'
 url:              https://wildcraft.github.io/
 
 author:           
