--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ force-https: True
 
 google-tracking-id: "UA-105323889-1"
 
+disqus-shortname: "wildcraft-github-io"
+
 plugins:
   - jekyll-paginate
   - jemoji
